testsuite/poke.pkl/offset-type-diag-1.pk
/* { dg-do compile } */

var a = offset<int<32>[2],B> @ 0#B; /* { dg-error "shall be integral" } */
